--- a/Hangman/templates/endgame.html
+++ b/Hangman/templates/endgame.html
@@ -1,10 +1,10 @@
 <form action="/hangman/endgame/" method="post">
 
-
     {% csrf_token %}
  <h1>{{winStatus}} </h1>
 
 <h2> Word is {{word}}!</h2>
 <h2> Score is {{score}}!</h2>
 <p> snap! </p>
+<a href="/hangman">Return to home page</a>
 </form>
